# rt-5gms-application-provider

./: .gitignore  ATTRIBUTION_NOTICE  Dockerfile  README.md  ap_package.py  config.py  docker-compose.yml  local-msaf.yaml  m1-user-interface.py  package-lock.json  package.json  requirements.txt  server.py  start.sh  utils.py
.github/workflows/: docker-build.yml  docker-compose.yml  integration-test.yml
express-mock-af/: Readme.md  app.js  package-lock.json  package.json
express-mock-af/routes/: metrics-reporting.js
express-mock-af/services/: reports.service.js
express-mock-af/test-express-mock-server/: app.js  package.json  (+1 more)
management-ui/: README.md  requirements.txt  server.py  utils.py
postman/: 5G-MAG M1.postman_collection.json  5G-MAG M5.postman_collection.json  5G-MAG MAF.postman_collection.json  5G-MAG.postman_environment.json  README.md
python/: .gitignore  README.md  pyproject.toml
python/lib/rt_m1_client/: client.py  session.py  types.py
python/src/rt_m1_apps/: m1_client.py  m1_session.py  msaf_configuration.py
qoe-metrics-dashboard/: .env.example  .eslintrc.json  .gitignore  .prettierrc  README.md  index.html  nx.json  package-lock.json  package.json  project.json  tsconfig.app.json  tsconfig.json  vite.config.ts
qoe-metrics-reporting-ui/: README.md  package.json  styles.css
qoeMetricsReportingUi/: README.md  index.html  main.js  package-lock.json
rt_m1_client/: client.py  configuration.py  data_store.py  exceptions.py  session.py  types.py
static/: m1-user-interface.js  style.css
templates/: index.html
tests/: integration_test.py
(+144 files in other folders)
